--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,10 +37,10 @@ install:
   # Install the build and runtime dependencies of the project.
   - "cd C:\\projects\\openml-python"
   - conda install --quiet --yes scikit-learn=0.18.2
-  - conda install --quiet --yes mock numpy scipy nose requests nbformat python-dateutil nbconvert pandas matplotlib seaborn
+  - conda install --quiet --yes mock numpy scipy nose requests nbformat python-dateutil nbconvert pandas matplotlib seaborn keras
   - pip install liac-arff xmltodict oslo.concurrency
   - "python setup.py install" #%CMD_IN_ENV%
-  
+
 
 # Not a .NET project, we build scikit-learn in the install step instead
 build: false
