--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,8 +37,8 @@ install:
   # Install the build and runtime dependencies of the project.
   - "cd C:\\projects\\openml-python"
   - conda install --quiet --yes scikit-learn=0.18.2
-  - conda install --quiet --yes mock numpy scipy nose requests nbformat python-dateutil nbconvert pandas matplotlib seaborn keras
-  - pip install liac-arff xmltodict oslo.concurrency
+  - conda install --quiet --yes mock numpy scipy nose requests nbformat python-dateutil nbconvert pandas matplotlib seaborn
+  - pip install liac-arff xmltodict oslo.concurrency tensorflow keras
   - "python setup.py install" #%CMD_IN_ENV%
 
 
